# asian-auntie

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN-FAQ.md  Makefile  README.md  config.py  pyproject.toml
.github/workflows/: scrape-recipes.yml
app/: __init__.py  extensions.py  logging_config.py  models.py
app/api/: auth.py  items.py
app/auth/: forms.py  routes.py
app/main/: routes.py
app/notifications/: __init__.py  routes.py  scheduler.py
app/onboarding/: __init__.py  routes.py
app/perishables/: forms.py  routes.py
app/recipes/: data.py  routes.py  search.py
app/recognition/: service.py
docs/: DOCUMENTATION-STRATEGY.md  INDEX.md  QUICK-START.md
docs/auth/: flows.yaml
docs/engineering/: design-system.md  setup.md
docs/legal-compliance/: IMPLEMENTATION-CHECKLIST.md  LEGAL-RISKS.md  QUICK-REFERENCE.md
docs/manage-perishables/: README.md  decisions.yaml  design-decisions.md  features.md  flows.yaml  future-features.yaml  mvp-checklist.yaml  open-questions.md  problem-statement.md  questions.yaml
docs/recommend-recipe/: README.md  decisions.yaml  design-decisions.md  features.md  flows.yaml  future-features.yaml  mvp-checklist.yaml  open-questions.md  problem-statement.md  questions.yaml  recommend-recipe.md
docs/trade-perishables/: README.md  decisions.yaml  design-decisions.md  features.md  flows.yaml  future-features.yaml  mvp-checklist.yaml  open-questions.md  problem-statement.md  questions.yaml  trade-perishables.md
migrations/versions/: ee067008499d_initial_schema.py  (+6 more)
pipeline/: README.md  discover.py  extract.py  fetch.py  merge_staging.py  pyproject.toml  run.py  sites.py  store.py  transform.py
pipeline/staging/: 2026-04-25_made_with_lau.py  2026-04-25_rasa_malaysia.py
scripts/: scrape_recipes.py  validate_recipe_urls.py
static/: manifest.json  style.css  sw.js
templates/: base.html  landing.html  settings.html
(+7 files in other folders)
