[project]
name = "asian-auntie"
version = "0.1.0"
description = "Asian pantry management — track perishables, reduce waste"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-bcrypt>=1.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.7",
    "flask-wtf>=1.2.2",
    "flask-limiter>=3.0",
    "flask-cors>=5.0.0",
    "sqlalchemy>=2.0",
    "marshmallow>=3.23,<4",
    "structlog>=24.4",
    "gunicorn>=23.0",
    "pillow>=11.0",
    "openai>=1.59",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0,<5",
    "black>=24.10.0,<25",
    "ruff>=0.0.360,<1",
]
